# functor-monad

./: .gitignore  README.md  cabal.project  functor-monad.cabal
cocomonad/: README.md  cocomonad.cabal
cocomonad/src/Control/Monad/: CoComonad.hs
day-comonoid/: CHANGELOG.md  README.md  day-comonoid.cabal
day-comonoid/src/Data/Functor/Day/: Comonoid.hs
free-applicative-t/: CHANGELOG.md  LICENSE  README.md  free-applicative-t.cabal
free-applicative-t/doc/proof/: ApT.md  Free-ApT.md  FreeAp-ApT.md
free-applicative-t/src/Control/Applicative/Trans/: FreeAp.hs
free-applicative-t/test/: Expr.hs  Main.hs
functor-monad/: CHANGELOG.md  LICENSE  README.md  functor-monad.cabal
functor-monad-test/: CHANGELOG.md  LICENSE  functor-monad-test.cabal
functor-monad-test/src/FFunctor/: Law.hs
functor-monad-test/src/Hedgehog/: FunctorGen.hs
functor-monad-test/test/: Main.hs
functor-monad/doc/proof/: Compose.md  FreeT.md  Trail.md
functor-monad/examples/: ListTVia.hs  TrailAsAdjunction.hs
functor-monad/src/: FComonad.hs  FFunctor.hs  FFunctor.hs-boot  FMonad.hs  FMonad.hs-boot  FStrong.hs
functor-monad/src/Control/Monad/: Trail.hs
functor-monad/src/Control/Monad/Trans/Free/: Extra.hs
functor-monad/src/Data/Bifunctor/Product/: Extra.hs
functor-monad/src/Data/Functor/: Bicompose.hs  Exp.hs  Flip1.hs  Precompose.hs
functor-monad/src/Data/Functor/Day/: Comonoid.hs  Extra.hs
functor-monad/src/Data/Functor/Kan/: Monad.hs
functor-monad/src/FComonad/: Adjoint.hs
functor-monad/src/FFunctor/: Adjunction.hs  FCompose.hs
functor-monad/src/FFunctor/Instances/: Day.hs  Free.hs  Kan.hs  Trans.hs
functor-monad/src/FMonad/: Adjoint.hs  Compose.hs  FFree.hs  FreeT.hs  State1.hs
functor-monad/src/FMonad/Cont/: Curried.hs  Exp.hs
functor-monad/src/FMonad/Instances/: Day.hs  Free.hs  Kan.hs  Trans.hs
functor-monad/src/FMonad/State/: Day.hs  Lan.hs  Ran.hs
functor-monad/src/FMonad/State/Simple/: Inner.hs  Outer.hs
src/: FFunctor.hs  FMonad.hs  FStrong.hs
src/Control/Applicative/Trans/: FreeAp.hs
src/Control/Monad/: Trail.hs
src/Data/Functor/Day/: Comonoid.hs
src/Data/Functor/Kan/: Monad.hs
src/FFunctor/: FCompose.hs
src/FMonad/: Compose.hs  FFree.hs
