cabal-version:      2.2
name:               cocomonad
version:            0.1
synopsis:           Turn Comonad into Monad transformer
description:
  Any Comonad can be turned into a monad transformer

license:            BSD-3-Clause
license-file:       LICENSE
homepage:           https://github.com/viercc/functor-monad/tree/main/day-comonoid
author:             Koji Miyazato
maintainer:         viercc@gmail.com
copyright:          Koji Miyazato
category:           Data Structures, Comonads, Functors
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    exposed-modules:
        Control.Monad.CoComonad
    build-depends:
        base >= 4.10 && < 5,
        transformers >= 0.6.1 && < 0.7,
        mtl >= 2.2 && < 2.4,
        comonad >= 5.0.8 && < 5.1,
        mmorph >= 1.2.0 && < 2,
        kan-extensions >= 5 && < 5.3,
        functor-monad >= 0.1 && <0.2
    hs-source-dirs:   src
    default-language: Haskell2010
