cabal-version:      2.2
name:               day-comonoid
version:            0.1
synopsis:           A comonoid w.r.t. Day, just like Applicative is monoid w.r.t. Day.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
copyright:          Koji Miyazato
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    exposed-modules:
        Data.Functor.Day.Comonoid
    build-depends:
        base >= 4.10 && < 5,
        kan-extensions >= 5 && < 5.3,
        comonad >= 5.0.8 && < 5.1
    hs-source-dirs:   src
    default-language: Haskell2010
