cabal-version:      3.0
name:               free-applicative-t
version:            0.1.0.0
synopsis:           Free Applicative Transformer
-- description:
homepage:           https://github.com/viercc/functor-monad
license:            GPL-3.0-only
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with: GHC ==9.0.2, GHC ==9.2.5, GHC ==9.4.3

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Applicative.Trans.FreeAp
    build-depends:    base >=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite free-applicative-t-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.15.0.0,
        free-applicative-t
