cabal-version:      3.0
name:               functor-monad-test
version:            0.1.1.1
synopsis:           Property tests for functor-monad
description:
  Test suite for functor-monad package.
  
  As a library, this package provides property tests
  (using hedgehog) for type classes provided in functor-monad package.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
copyright:          (c) Koji Miyazato 2024
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common warnings
    ghc-options:
      -Wall -Wcompat
      -Wunused-packages -Wwarn=unused-packages

library
    import:           warnings
    exposed-modules:
        Hedgehog.FunctorGen
        FFunctor.Law
    build-depends:
        base >= 4.16 && < 5,
        adjunctions >= 4.4.2 && < 4.5,
        comonad >= 5.0.8 && < 5.1,
        transformers >= 0.6.1 && < 0.7,
        free >= 5.2 && < 5.3,
        bifunctors >= 5.6.1 && < 5.7,
        auto-lift-classes >= 1.0.1 && < 1.2,
        kan-extensions >= 5 && < 5.3,
        free-applicative-t >= 0.1.0 && < 0.2,
        day-comonoid >= 0.1 && < 0.2,
        natural-transformation >= 0.4.1 && < 0.5,
        functor-monad == 0.1.1.1,

        containers >= 0.6,
        hedgehog >= 1.4 && < 1.5
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite functor-monad-test-suite
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hedgehog,
        functor-monad,
        functor-monad-test,
