cabal-version:       3.0
name:                functor-monad
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
copyright:           2018-2022 Koji Miyazato
build-type:          Simple
extra-doc-files:     CHANGELOG.md, README.md

library
  hs-source-dirs:  src

  exposed-modules:
    FFunctor,
    FFunctor.FCompose,
    FFunctor.Adjunction,

    FMonad,
    FMonad.FreeT,
    FMonad.State.Day,
    FMonad.State.Ran,
    FMonad.State.Lan,
    FMonad.State.Simple.Inner,
    FMonad.State.Simple.Outer,
    FMonad.FFree, FMonad.Adjoint,
    FStrong,
    FComonad, FComonad.Adjoint,

    Control.Monad.Trail,
    
    Control.Monad.Trans.Free.Extra,
    Data.Functor.Precompose,
    Data.Functor.Bicompose,
    Data.Functor.Flip1,
    Data.Functor.Day.Comonoid,
    Data.Functor.Day.Extra,
    Data.Bifunctor.Product.Extra
  other-modules: 
    FFunctor.Instances.Day,
    FFunctor.Instances.Kan,
    FFunctor.Instances.Free,
    FFunctor.Instances.Trans,
    FMonad.Instances.Day,
    FMonad.Instances.Kan,
    FMonad.Instances.Free,
    FMonad.Instances.Trans,
  build-depends:       base >= 4.10 && < 5
                     , transformers
                     , comonad
                     , kan-extensions
                     , adjunctions
                     , bifunctors
                     , free
                     , free-applicative-t
                     , auto-lift-classes
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010

test-suite functor-monad-examples
  type:               exitcode-stdio-1.0
  hs-source-dirs:     examples
  main-is:            ListTVia.hs
  build-depends:      base, transformers, free, functor-monad
  ghc-options:        -Wall -Wwarn=unused-packages
  default-language:   Haskell2010
