cabal-version:       3.0
name:                functor-monad
synopsis:
  Functors and monads on the category of Functors
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
category:            Monads, Comonads, Functors
maintainer:          Koji Miyazato <viercc@gmail.com>
copyright:           2018-2023 Koji Miyazato
build-type:          Simple
extra-doc-files:     CHANGELOG.md, README.md
tested-with:         GHC ==9.4.8, GHC ==9.6.3, GHC ==9.8.1

library
  hs-source-dirs:  src
  exposed-modules:
    FFunctor,
    FFunctor.FCompose,
    FFunctor.Adjunction,
    FMonad,
    FMonad.FFree,
    FMonad.FreeT,
    FMonad.Adjoint,
    FMonad.State.Day,
    FMonad.State.Ran,
    FMonad.State.Lan,
    FMonad.State.Simple.Inner,
    FMonad.State.Simple.Outer,

    FStrong,
    
    FComonad,
    FComonad.Adjoint,

    Control.Monad.Trail,
    
    Data.Functor.Precompose,
    Data.Functor.Bicompose,
    Data.Functor.Flip1,
    Data.Functor.Day.Extra,
  other-modules:
    Data.Bifunctor.Product.Extra,
    Control.Monad.Trans.Free.Extra
  build-depends:
    base >= 4.16 && < 5,
    adjunctions >= 4.4.2 && < 4.5,
    comonad >= 5.0.8 && < 5.1,
    transformers >= 0.6.1 && < 0.7,
    free >= 5.1.10 && < 5.3,
    bifunctors >= 5.6.1 && < 5.7,
    auto-lift-classes >= 1.0.1 && < 1.2,
    kan-extensions >= 5 && < 5.3,
    free-applicative-t >= 0.1.0 && < 0.2,
    day-comonoid >= 0.1 && < 0.2
  ghc-options:       -Wall -Wcompat
                     -Wunused-packages -Wwarn=unused-packages
  default-language:  Haskell2010

test-suite functor-monad-examples
  type:               exitcode-stdio-1.0
  hs-source-dirs:     examples
  main-is:            ListTVia.hs
  build-depends:      base, transformers, free, functor-monad
  ghc-options:        -Wall -Wwarn=unused-packages
  default-language:   Haskell2010
